# OS

lab1/: numbers.sln
lab1/Debug/: numbers.idb  numbers.lib
lab1/OS_lab1/: OS_lab1.cpp  OS_lab1.vcxproj  OS_lab1.vcxproj.filters
lab1/OS_lab1/Debug/: OS_lab1.exe.recipe  OS_lab1.ilk  vc142.idb
lab1/OS_lab1/Debug/OS_lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OS_lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/numbers/: numbers.cpp  numbers.h  numbers.vcxproj  numbers.vcxproj.filters
lab1/numbers/Debug/: numbers.pch
lab1/numbers/Debug/numbers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lab1_linux/main/: CMakeLists.txt  main.cpp
lab1_linux/number/: CMakeLists.txt  number.cpp  number.h
lab1_linux/vector/: CMakeLists.txt  vector.cpp  vector.h
lab1_linux_console/: script.sh
lab2/: main.cpp  matrix.cpp  matrix.h
lab2_linux/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
lab2_windows/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
lab3/: CMakeLists.txt  buffered_channel.h  main.cpp
lab4_linux/: CMakeLists.txt  killer.h  user.c
lab4_windows/killer/: CMakeLists.txt  main.c
lab5_linux/Main/: CMakeLists.txt  main.cpp
lab5_linux/ProcessA/: CMakeLists.txt  main.cpp
lab5_linux/ProcessM/: CMakeLists.txt  main.cpp
lab5_linux/ProcessP/: CMakeLists.txt  main.cpp
lab5_linux/ProcessS/: CMakeLists.txt  main.cpp
